fin seccion 10 - login completo

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-PORT=3005
+PORT=3000
 
 DB_CNN=mongodb+srv://juanf_her:vgxd5dOg67Nkf6lf@cluster0.vpmlv.mongodb.net/hospitaldb
+
+JWT_SECRET=Jdsfre6543?/jcsdt345twerw56
