Sección 12 terminada Google Sign In

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ PORT=3000
 DB_CNN=mongodb+srv://juanf_her:vgxd5dOg67Nkf6lf@cluster0.vpmlv.mongodb.net/hospitaldb
 
 JWT_SECRET=Jdsfre6543?/jcsdt345twerw56
+
+GOOGLE_ID=675959597355-o9enigl29l0fvhlt2l918emagqjc16k9.apps.googleusercontent.com
+GOOGLE_SECRET=GdEtn_buSsp1pw_kB_0cST5R
